--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="keywords" content="Formulario, E-mail, Responsivo">
+    <meta name="description" content="Projeto de um formulario, que aceita como entrada apenas o email, HTML e CSS, responsivo">
+    <meta name="author" content="Felipe Barros Gouveia Tomé">
+    <meta name="robots" content="index, all">
+
     <link rel="icon" href="img/bxl-gmail.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
